# octorace

./: .dockerignore  .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  config.example.yml  database.env  docker-compose.yml
docs/: README.md
migrations/2020-12-06-213251_create_users/: down.sql  up.sql
migrations/2020-12-06-214458_create_connections/: down.sql  up.sql
migrations/2020-12-06-214502_create_guilds/: down.sql  up.sql
src/: bot.rs  config.rs  macros.rs  main.rs  models.rs  tasks.rs
src/api/: guilds.rs  mod.rs  models.rs  user.rs
src/api/schemas/: github_contrib_query.graphql  schema.graphql
src/db/: guard.rs  pool.rs
src/oauth/: mod.rs  routes.rs
src/schemas/: diesel.rs  mod.rs
