[package]
name = "octorace"
version = "0.1.0"
authors = ["Matthew <staalkoper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4.0.0-alpha.2"
url = "2.2.0"
rocket = "0.4.6"
lazy_static = "1.4.0"
rocket_contrib = "0.4.6"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.60"
diesel_migrations = "1.4.0"

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dependencies.reqwest]
version = "0.10.9"
features = ["json"]

[dependencies.serde]
version = "1.0.99"

[dependencies.diesel]
version = "1.4.5"
features = [
    "postgres",
    "r2d2",
    "chrono",
    "num-bigint",
    "num-traits",
    "num-integer",
    "numeric"]