[package]
name = "octorace"
version = "0.1.0"
authors = ["Matthew <staalkoper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4.0.0-alpha.2"
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master" }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.60"
serde_yaml = "0.8.14"
graphql_client = "0.9.0"

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dependencies.reqwest]
version = "0.10.9"
features = ["json"]

[dependencies.serde]
version = "1.0.99"

[dependencies.sqlx]
version = "0.4.1"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "offline", "chrono"]

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket.git"
branch = "master"
features = ["tls", "secrets"]